se realiza api de inicio de sesion de usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
 
 debug=true
